--- a/app/src/main/res/layout-land/activity_images_detail.xml
+++ b/app/src/main/res/layout-land/activity_images_detail.xml
@@ -150,7 +150,7 @@
         android:src="@drawable/ic_heart_white"
         app:layout_constraintBottom_toTopOf="@id/contLayImageDetail"
         app:layout_constraintStart_toStartOf="parent"
-        app:tint="@color/colorRed" />
+        app:tint="@color/colorLightRed" />
     <ImageView
         android:id="@+id/ivImagesDetailGreyHeart"
         android:layout_width="120dp"
