--- a/app/src/main/res/layout/activity_blog_detail.xml
+++ b/app/src/main/res/layout/activity_blog_detail.xml
@@ -127,7 +127,7 @@ Blog     <androidx.constraintlayout.widget.ConstraintLayout
                 android:src="@drawable/ic_heart_white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:tint="@color/colorRed" />
+                app:tint="@color/colorLightRed" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </FrameLayout>
