--- a/app/src/main/res/layout/activity_categories_detail_motion_scene_start.xml
+++ b/app/src/main/res/layout/activity_categories_detail_motion_scene_start.xml
@@ -65,7 +65,7 @@
         android:src="@drawable/ic_heart_white"
         app:layout_constraintBottom_toTopOf="@+id/linLayCategoriesDetail1"
         app:layout_constraintStart_toStartOf="parent"
-        app:tint="@color/colorRed" />
+        app:tint="@color/colorLightRed" />
 
     <LinearLayout
         android:id="@+id/linLayCategoriesDetail1"
