--- a/app/src/main/res/layout/activity_facts_detail.xml
+++ b/app/src/main/res/layout/activity_facts_detail.xml
@@ -145,7 +145,7 @@
         android:src="@drawable/ic_heart_white"
         app:layout_constraintBottom_toTopOf="@+id/llFactsDetail"
         app:layout_constraintStart_toStartOf="parent"
-        app:tint="@color/colorRed" />
+        app:tint="@color/colorLightRed" />
 
     <LinearLayout
         android:id="@+id/llFactsDetail"
