--- a/app/src/main/res/layout/activity_images_detail.xml
+++ b/app/src/main/res/layout/activity_images_detail.xml
@@ -148,7 +148,7 @@
         android:src="@drawable/ic_heart_white"
         app:layout_constraintBottom_toTopOf="@id/contLayImageDetail"
         app:layout_constraintStart_toStartOf="parent"
-        app:tint="@color/colorRed" />
+        app:tint="@color/colorLightRed" />
 
 
     <ImageView
