--- a/app/src/main/res/layout/activity_login_or_register.xml
+++ b/app/src/main/res/layout/activity_login_or_register.xml
@@ -12,10 +12,20 @@
 
         <TextView
             style="@style/LabelStyle"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
             android:textSize="20sp"
+            android:layout_marginBottom="300dp"
+            android:text="@string/loginOrRegister_welcome_txt" />
+
+
+        <TextView
+            style="@style/LabelStyle"
+            android:textSize="20sp"
+            android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
             android:layout_marginBottom="150dp"
-            android:text="@string/loginOrRegister_welcome_txt" />
+            android:text="@string/loginorregisterInformation" />
 
         <RelativeLayout
             android:layout_width="match_parent"
