--- a/app/src/main/res/layout/activity_facts_detail.xml
+++ b/app/src/main/res/layout/activity_facts_detail.xml
@@ -212,6 +212,7 @@
                         <TextView
                             android:id="@+id/tvFactsDescription"
                             android:layout_width="match_parent"
+                            android:scrollbars="vertical"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="20dp"
                             android:fontFamily="@font/open_sans_condensed_light"
