--- a/app/src/main/res/layout-land/activity_expensive_checker.xml
+++ b/app/src/main/res/layout-land/activity_expensive_checker.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="activities.ExpensiveCheckerActivity">
-
     <LinearLayout
-        android:id="@+id/froozeblue"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:id="@+id/topLayoutChecker"
         android:orientation="vertical">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/transparent"
             android:outlineAmbientShadowColor="@color/transparent"
-            android:outlineSpotShadowColor="@color/transparent">
+            android:outlineSpotShadowColor="@color/transparent"
+            android:background="@color/transparent">
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbarExpensiveCheckerActivity"
@@ -29,14 +31,13 @@
                 android:theme="?attr/actionBarTheme">
 
 
-
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_marginEnd="30dp"
                     android:fontFamily="@font/roboto"
                     android:gravity="center"
-                    android:text="Sports cars from Ferrari"
+                    android:text="Watches from Rolex"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                     android:textColor="@color/colorWhite"
                     android:textSize="25sp"
@@ -49,52 +50,89 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:orientation="horizontal">
-
+            android:orientation="horizontal" >
             <ImageView
                 android:layout_width="200dp"
-                android:layout_height="wrap_content"
+                android:src="@drawable/img_expensive_checker"
                 android:adjustViewBounds="true"
-                android:src="@drawable/expensive_checker"
-                android:contentDescription="TODO" />
+                android:layout_height="wrap_content"/>
 
 
         </LinearLayout>
-
         <View
             android:id="@+id/cover"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:visibility="gone" />
+            android:visibility="gone"/>
     </LinearLayout>
 
     <TextView
-        android:id="@+id/advantages"
+        android:id="@+id/advantagesExpensiveChecker"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/topLayoutChecker"
+        app:layout_constraintBottom_toTopOf="@id/advantage1ExpensiveChecker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/froozeblue"
         android:text="Benefits:"
+        android:fontFamily="@font/harmonia_sans_bold"
         android:layout_marginStart="20dp"
         android:textSize="28sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#000000" />
 
     <TextView
-        android:id="@+id/discover_expensive"
+        android:id="@+id/advantage1ExpensiveChecker"
+        android:fontFamily="@font/harmonia_sans_regular"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/advantagesExpensiveChecker"
         android:layout_width="match_parent"
+        android:textSize="16sp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/advantages"
         android:layout_marginStart="30dp"
-        android:fontFamily="@font/roboto"
-        android:text="@string/discover_expensive"
+        android:text="@string/advantageExpensive"
         android:textAlignment="textStart"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#000000"
-        android:textSize="26sp" />
+        android:textColor="#000000" />
+    <TextView
+        android:id="@+id/tvTimerExpensive"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/advantage1ExpensiveChecker"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/peopleDesExpensiveChecker"
+        android:text="00:00"
+        android:textColor="@color/colorRed"
+        android:textSize="60sp" />
+    <TextView
+        android:id="@+id/peopleNumExpensiveChecker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+
+        android:layout_marginStart="25dp"
+        android:fontFamily="@font/open_sans_condensed_light"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btnExpensiveChecker"/>
+    <TextView
+        android:id="@+id/peopleDesExpensiveChecker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:text="@string/checker_people_description"
+        android:fontFamily="@font/open_sans_condensed_light"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="58dp"
+        app:layout_constraintBottom_toTopOf="@+id/btnExpensiveChecker"/>
 
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnExpensiveChecker"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
@@ -105,20 +143,11 @@
         android:layout_marginBottom="7dp"
         android:background="@drawable/button_bg"
         android:elevation="10dp"
-        android:text="Purchase $400"
+        android:text="Purchase  $352"
         android:textAllCaps="false"
         android:textColor="@color/colorWhite"
         android:textSize="25sp"
         app:cornerRadius="30dp"
         app:rippleColor="#00FFFFFF" />
-    <TextView
-        android:id="@+id/alreadysubscribed"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:visibility="gone"
-        android:text="You're already subscribed\n Thank You"
-        android:textSize="30sp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"/>
-</RelativeLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
