--- a/app/src/main/res/layout/activity_redeem.xml
+++ b/app/src/main/res/layout/activity_redeem.xml
@@ -117,7 +117,6 @@
 
 
 
-
     <TextView
         android:id="@+id/Checkout"
         android:layout_width="280dp"
@@ -130,7 +129,7 @@
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/sf_pro_display_medium"
         android:gravity="center"
-        android:text="Get 80% off on your Ferrari Sports Cars"
+        android:text="@string/redeem_information"
         android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:textColor="#3E425D"
         android:textSize="20sp"
