--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -79,12 +79,12 @@
     <color name="colorRedeem04">#771F1A</color>
     <color name="colorRedeem05">#F93040</color>
     <color name="colorRedeem06">#B51832</color>
-    <color name="colorRedeem07">#333238</color>
-    <color name="colorRedeem08">#4A4D53</color>
-    <color name="colorRedeem09">#B1A493</color>
-    <color name="colorRedeem10">#3B5C76</color>
-    <color name="colorRedeem11">#E7162C</color>
-    <color name="colorRedeem12">#E30325</color>
+    <color name="colorRedeem07">#E9102A</color>
+    <color name="colorRedeem08">#E00E2C</color>
+    <color name="colorRedeem09">#375570</color>
+    <color name="colorRedeem10">#99918B</color>
+    <color name="colorRedeem11">#2E3339</color>
+    <color name="colorRedeem12">#2F2E35</color>
 
 
 
